# ai-code-review-platform

./: .dockerignore  .editorconfig  .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/apps/core/: models.py  utils.py
backend/apps/reviews/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/reviews/services/: embedding_service.py  rag_pipeline.py
backend/apps/reviews/tests/: conftest.py  test_models.py  test_views.py
backend/apps/users/: models.py  serializers.py  urls.py  views.py
backend/apps/users/tests/: test_models.py  test_views.py
backend/config/: asgi.py  celery.py  urls.py
backend/config/settings/: base.py  development.py  production.py
frontend/: .eslintrc.json  Dockerfile  index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  reviews.ts  users.ts
frontend/src/components/layout/: AppLayout.tsx
frontend/src/components/reviews/: AISuggestionPanel.tsx  ActiveUsers.tsx  AnnotationThread.tsx  CodeViewer.tsx  FileSidebar.tsx
frontend/src/components/ui/: EmptyState.tsx  LoadingSpinner.tsx  StatusBadge.tsx
frontend/src/hooks/: useReviewWebSocket.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx  RepositoryPage.tsx  SessionPage.tsx
frontend/src/store/: authStore.ts  reviewStore.ts
frontend/src/test/: utils.test.ts
frontend/src/types/: index.ts
