[project]
name = "ai-code-review-platform"
version = "0.1.0"
description = "code review platform with RAG-based suggestions"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.3",
    "django-filter>=24.0",
    "channels[daphne]>=4.1",
    "channels-redis>=4.2",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "celery[redis]>=5.3",
    "openai>=1.30",
    "tiktoken>=0.7",
    "python-dotenv>=1.0",
    "whitenoise>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "factory-boy>=3.3",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
